--- a/style.css
+++ b/style.css
@@ -3,10 +3,17 @@
 }
 body {
 	font-family: 'Roboto', sans-serif;
+	background-image: url(images/patt.png);
 }
 .container {
-	width: 1200px;
+	width: 1170px;
 	margin: 0 auto;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+.row {
+	margin-left: -15px;
+	margin-right: -15px;
 }
 .col-md-3 {
 	width: 25%;
@@ -16,9 +23,15 @@ body {
 }
 [class*="col-"]{
 	float: left;
+	padding-right: 15px;
+	padding-left: 15px;
 }
 .row:after {
 	content: "";
 	clear: both;
 	display: block;
+}
+.header {
+	background-color: rgba(255,255,255,0.75);
+	padding: 25px 0;
 }
