add menu and logo

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	padding-right: 15px;
 	padding-left: 15px;
 }
-.row:after {
+.row:after, .menu:after {
 	content: "";
 	clear: both;
 	display: block;
@@ -35,3 +35,24 @@ body {
 	background-color: rgba(255,255,255,0.75);
 	padding: 25px 0;
 }
+.menu li {
+	width: 25%;
+	float: left;
+	border-left: 1px solid #2c71b8;
+}
+.menu li:last-child { 
+	border-right: 1px solid #2c71b8;
+ }
+.menu a {
+	height: 50px;
+	display: block;
+	text-decoration: none;
+	text-align: center;
+	line-height: 50px;
+	font-size: 21px;
+	color: #2c71b8;
+}
+.menu a:hover {
+    background-color: #2c71b8;
+    color: white;
+   }
