--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 	padding-right: 15px;
 	padding-left: 15px;
 }
-.row:after, .menu:after {
+.row:after, .menu:after{
 	content: "";
 	clear: both;
 	display: block;
@@ -56,3 +56,40 @@ body {
     background-color: #2c71b8;
     color: white;
    }
+[class*="search"]{
+	float: left;
+	padding-right: 15px;
+	padding-left: 15px;
+}
+.search {
+	display: block;
+	float: left;
+	width: 200px;
+	height: 40px;
+	border: 1px solid black;
+	padding: 0;
+}
+input[type="search"] {
+	display: block;
+	float: left;
+	border: none;
+	width: 168px;
+	height: 38px;
+	-webkit-appearance: none;
+	vertical-align: middle;
+}
+input[type="submit"] {
+	display: block;
+	float: left;
+	width: 30px; /* Ширина кнопки */
+    height: 30px; /* Высота кнопки */
+    border: 0px; /* Убираем рамку */
+    padding: 0px;
+    background: url(images/srchbtn.png) no-repeat 50% 50%; /* Параметры фона */
+   }
+.basket {
+	width: 5px; /* Ширина кнопки */
+    height: 5px; /* Высота кнопки */
+    border: 0px; /* Убираем рамку */
+    padding: 0px;
+}
